--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>Este es un ejemplo sencillo de ejecución de JS</h1>
-    <p>En ele ejemplo se mostrará una serie de números pares entre el 0 y el 10</p>
+    <p>En ele ejemplo se mostrará una serie de números pares entre un numero inicial y el 10</p>
 </body>
 </html>
