--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejemplo01</title>
-    <script src="./js/app.js"></script>
+
 </head>
 <body>
     <h1>Este es un ejemplo sencillo de ejecución de JS</h1>
-    <p>En ele ejemplo se mostrará una serie de números pares entre un numero inicial y el 10</p>
+    <p>En este ejemplo se mostrarán los números impares a partir del 0 hasta un número final</p>
+    <script src="./js/app.js"></script>
 </body>
 </html>
