--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
     <h1>Este es un ejemplo sencillo de ejecución de JS</h1>
     <p>En este ejemplo se mostrarán los números impares a partir del 0 hasta un número final</p>
-    <script src="./js/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
